More runtime exception fixes.